--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
   <div class="product-details">
     <div class="product-image">
-      <img src="product_image.jpg" alt="Product Image">
-    </div>
-    <div class="thumbnail-images">
-      <img src="jeanstop.jpg" alt="Thumbnail Image 1">
-      <img src="jeanstop.jpg" alt="Thumbnail Image 2">
+      <img src="C:\Users\Pandi\Desktop\jeanstop.jpg" alt="Product Image">
+    
+   </div>
+   <div class="thumbnail-images">
+         <img src="C:\Users\Pandi\Desktop\jeanstop.jpg" alt="Thumbnail Image 1">
+      <img src="C:\Users\Pandi\Desktop\jeanstop.jpg" alt="Thumbnail Image 2">
+      <img src="C:\Users\Pandi\Desktop\jeanstop.jpg" alt="Thumbnail Image 3">
+      <img src="C:\Users\Pandi\Desktop\jeanstop.jpg" alt="Thumbnail Image 4">
       <!-- Add more thumbnail images as needed -->
     </div>
     <div class="details">
